converted to foundation

--- a/LandingInfo/index.html
+++ b/LandingInfo/index.html
@@ -3,62 +3,55 @@
 <head>
 	<title>Landing Information Page</title>
 
-	<link rel="stylesheet" type="text/css" href="../assets/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../assets/foundation.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="container">
 
-<div class="header">
-	<nav class="navbar navbar-fixed-top">
-		<div class="container">
-			<div class="col-md-4">
-				<ul class="nav navbar-nav">
-					<li><a href="#">Link</a></li>
-					<li><a href="#">Link</a></li>
-				</ul>
-			</div>
+<div class="header large-12">
+	<nav class="navbar compress">
+		<div class="large-5 columns">
+			<a href="#">Link</a>
+			<a href="#">Link</a>
+		</div>
 
-			<div class="col-md-2">
-				<h4>Dolor Sit</h4>
-			</div>
+		<div class="large-2 columns">
+			<h4>Dolor Sit</h4>
+		</div>
 
-			<div class="col-md-4">
-				<ul class="nav navbar-nav">
-					<li><a href="#">Link</a></li>
-					<li><a href="#">Link</a></li>
-				</ul>
-			</div>
-		</div><!-- container -->
+		<div class="large-5 columns">
+			<a href="#">Link</a>
+			<a href="#">Link</a>
+		</div>
 	</nav>
 
-
 	<div class="row">
-		<div class="col-md-12">
+		<div class="small-6 large-centered columns">
 			<h2>Lorem ipsum dolor sit amet</h2>
 
-			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+			<p>Consectetur adipiscing elit. Donec id felis est. Etiam neque dui, sagittis ut dolor ut, dapibus vulputate nulla.</p>
 
-			<div class="col-md-6 col-md-offset-3">
-				<button type="button" class="btn btn-primary btn-lg btn-block" href="#">Lorem Ipsum</button>
-			</div>
+			<a class="expanded button" href="#">Such Expand</a>
 		</div>
-	</div><!-- row -->
+	</div>
 </div><!-- header -->
 
-<div class="content col-md-12">
+
+<div class="content large-12">
 	<div class="row">
-		<div class="col-md-8 col-md-offset-2">
-			<h3>Sed ut perspiciatis unde omnis</h3>
+		<div class="small-6 large-centered columns">
+			<h3>arcu vitae lobortis suscipit</h3>
 
-			<!-- put image here -->
+			<div>
+				<!-- divider image here -->
+			</div>	
 
-			<p>Sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+			<p>Magna ligula semper nisl, sit amet lobortis augue urna at eros. Proin consectetur arcu est, aliquam vulputate eros molestie non. Sed nec lectus orci. Praesent porta ac quam vitae bibendum. Mauris ex metus, pharetra vel placerat eu, hendrerit ac quam.</p>
 		</div>
 	</div><!-- row -->
 
 	<div class="row">
-		<div class="col-md-3">
+		<div class="large-3 columns">
 			<div class="threebox">
 				<div class="imgBox">
 
@@ -70,7 +63,7 @@
 			</div>
 		</div>
 
-		<div class="col-md-3">
+		<div class="large-3 columns">
 			<div class="threebox">
 				<div class="imgBox">
 
@@ -82,7 +75,7 @@
 			</div>
 		</div>
 
-		<div class="col-md-3">
+		<div class="large-3 columns">
 			<div class="threebox">
 				<div class="imgBox">
 
@@ -96,17 +89,16 @@
 	</div><!-- row -->
 </div><!-- content -->
 
-
-<footer class="footer">
+<footer class="footer large-12">
 	<div class="row">
-		<div class="col-md-12">
-			<h3>Ut euismod ullamcorper nisl semper</h3>
+		<div class="small-6 large-centered columns">
+			<h3>Praesent euismod neque quis elementum</h3>
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="col-md-2">
-			<h4>Title</h4>
+		<div class="large-2 columns">
+			<h5>Heading</h5>
 			<ul>
 				<li><a href="#">Link</a></li>
 				<li><a href="#">Link</a></li>
@@ -115,8 +107,8 @@
 			</ul>
 		</div>
 
-		<div class="col-md-2">
-			<h4>Title</h4>
+		<div class="large-2 columns">
+			<h5>Heading</h5>
 			<ul>
 				<li><a href="#">Link</a></li>
 				<li><a href="#">Link</a></li>
@@ -124,8 +116,8 @@
 			</ul>
 		</div>
 
-		<div class="col-md-2">
-			<h4>Title</h4>
+		<div class="large-2 columns end">
+			<h5>Heading</h5>
 			<ul>
 				<li><a href="#">Link</a></li>
 				<li><a href="#">Link</a></li>
@@ -138,6 +130,5 @@
 	</div>
 </footer>
 
-</div><!-- container -->
 </body>
 </html>
