--- a/LandingInfo/index.html
+++ b/LandingInfo/index.html
@@ -9,50 +9,52 @@
 <body>
 
 <div class="header large-12">
-	<nav class="navbar compress">
-		<div class="large-5 columns">
-			<a href="#">Link</a>
-			<a href="#">Link</a>
-		</div>
-
-		<div class="large-2 columns">
-			<h4>Dolor Sit</h4>
-		</div>
-
-		<div class="large-5 columns">
-			<a href="#">Link</a>
-			<a href="#">Link</a>
-		</div>
-	</nav>
-
 	<div class="row">
-		<div class="small-6 large-centered columns">
+		<nav class="navbar compress">
+			<div class="large-5 columns">
+				<a href="#">Link</a>
+				<a href="#">Link</a>
+			</div>
+
+			<div class="large-2 columns text-center">
+				<h5>Dolor Sit</h5>
+			</div>
+
+			<div class="large-5 columns left-nav">
+				<a href="#">Link</a>
+				<a href="#">Link</a>
+			</div>
+		</nav>
+	</div>
+	
+	<div class="row compress info text-center">
 			<h2>Lorem ipsum dolor sit amet</h2>
 
-			<p>Consectetur adipiscing elit. Donec id felis est. Etiam neque dui, sagittis ut dolor ut, dapibus vulputate nulla.</p>
+			<p>Curabitur consequat, arcu vitae lobortis suscipit, magna ligula semper nisl, sit amet lobortis augue urna at eros. Proin consectetur arcu est, aliquam vulputate eros molestie non. Sed nec lectus orci. Praesent porta ac quam vitae bibendum. Mauris ex metus, pharetra vel placerat eu, hendrerit ac quam.</p>
 
 			<a class="expanded button" href="#">Such Expand</a>
 		</div>
 	</div>
 </div><!-- header -->
 
+<div class="content">
+	<div class="large-12 text-center">
+		<div class="row">
+			<h3>Praesent euismod neque quis elementum fermentum</h3>
+		</div>
 
-<div class="content large-12">
-	<div class="row">
-		<div class="small-6 large-centered columns">
-			<h3>arcu vitae lobortis suscipit</h3>
+		<div class="row">
+			<div class="separator"></div>
+		</div>
 
-			<div>
-				<!-- divider image here -->
-			</div>	
-
-			<p>Magna ligula semper nisl, sit amet lobortis augue urna at eros. Proin consectetur arcu est, aliquam vulputate eros molestie non. Sed nec lectus orci. Praesent porta ac quam vitae bibendum. Mauris ex metus, pharetra vel placerat eu, hendrerit ac quam.</p>
+		<div class="row">
+			<p>Integer aliquam odio lobortis, imperdiet justo a, convallis ligula. Sed gravida nibh nunc, eget mattis ipsum maximus non. Quisque vel justo eleifend, pulvinar sapien vitae, ornare nisl. Sed porta mollis enim, ut porttitor orci. Aliquam nec dolor felis. Donec vehicula mattis congue. Donec auctor sapien ut tellus mattis, a auctor nunc laoreet. Donec eget arcu et lectus aliquam semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam sed ligula et mi rhoncus vehicula.</p>
 		</div>
 	</div><!-- row -->
 
 	<div class="row">
-		<div class="large-3 columns">
-			<div class="threebox">
+		<div class="large-3">
+			<div class="threeBox">
 				<div class="imgBox">
 
 				</div>
@@ -62,33 +64,11 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<div class="large-3 columns">
-			<div class="threebox">
-				<div class="imgBox">
-
-				</div>
-
-				<div class="infoBox">
-
-				</div>
-			</div>
-		</div>
-
-		<div class="large-3 columns">
-			<div class="threebox">
-				<div class="imgBox">
-
-				</div>
-
-				<div class="infoBox">
-
-				</div>
-			</div>
-		</div>
-	</div><!-- row -->
 </div><!-- content -->
 
+<!-- 
 <footer class="footer large-12">
 	<div class="row">
 		<div class="small-6 large-centered columns">
@@ -128,7 +108,7 @@
 			</ul>
 		</div>
 	</div>
-</footer>
+</footer> -->
 
 </body>
 </html>
