desktop styled, images add, gitignore

--- a/LandingInfo/index.html
+++ b/LandingInfo/index.html
@@ -48,19 +48,49 @@
 		</div>
 
 		<div class="row">
-			<p>Integer aliquam odio lobortis, imperdiet justo a, convallis ligula. Sed gravida nibh nunc, eget mattis ipsum maximus non. Quisque vel justo eleifend, pulvinar sapien vitae, ornare nisl. Sed porta mollis enim, ut porttitor orci. Aliquam nec dolor felis. Donec vehicula mattis congue. Donec auctor sapien ut tellus mattis, a auctor nunc laoreet. Donec eget arcu et lectus aliquam semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam sed ligula et mi rhoncus vehicula.</p>
+			<p class="moreInfo">Integer aliquam odio lobortis, imperdiet justo a, convallis ligula. Sed gravida nibh nunc, eget mattis ipsum maximus non. Quisque vel justo eleifend, pulvinar sapien vitae, ornare nisl. Sed porta mollis enim, ut porttitor orci. Aliquam nec dolor felis. Donec vehicula mattis congue. Donec auctor sapien ut tellus mattis, a auctor nunc laoreet. Donec eget arcu et lectus aliquam semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam sed ligula et mi rhoncus vehicula.</p>
 		</div>
 	</div><!-- row -->
 
-	<div class="row">
-		<div class="large-3">
+	<div class="row imgColumns">
+		<div class="large-4 columns">
 			<div class="threeBox">
 				<div class="imgBox">
-
+					<img src="assets/thankyou.jpg">
 				</div>
 
 				<div class="infoBox">
+					<h4>Nullam Dignissim</h4>
 
+					<p>Cras scelerisque congue dolor a feugiat. In semper, augue volutpat aliquam lobortis, turpis libero scelerisque lorem.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="large-4 columns">
+			<div class="threeBox">
+				<div class="imgBox">
+					<img src="assets/sofa.jpg">
+				</div>
+
+				<div class="infoBox">
+					<h4>Quis Semper Erat</h4>
+
+					<p>Augue et diam. Nam lacus ante, tincidunt id semper a, tincidunt ut tellus. Fusce suscipit non eros id porttitor.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="large-4 columns">
+			<div class="threeBox">
+				<div class="imgBox">
+					<img src="assets/lights.jpg">
+				</div>
+
+				<div class="infoBox">
+					<h4>Donec at Ullamcorper</h4>
+
+					<p>Neque aliquam vitae ipsum ornare, viverra turpis vel, tristique ligula.</p>
 				</div>
 			</div>
 		</div>
@@ -68,47 +98,14 @@
 
 </div><!-- content -->
 
-<!-- 
-<footer class="footer large-12">
-	<div class="row">
-		<div class="small-6 large-centered columns">
+
+<footer class="large-12">
+	<div class="row text-center">
 			<h3>Praesent euismod neque quis elementum</h3>
-		</div>
+
+			<a href="#">Link</a> | <a href="#">Link</a> | <a href="#">Link</a> | <a href="#">Link</a>
 	</div>
-
-	<div class="row">
-		<div class="large-2 columns">
-			<h5>Heading</h5>
-			<ul>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-			</ul>
-		</div>
-
-		<div class="large-2 columns">
-			<h5>Heading</h5>
-			<ul>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-			</ul>
-		</div>
-
-		<div class="large-2 columns end">
-			<h5>Heading</h5>
-			<ul>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-			</ul>
-		</div>
-	</div>
-</footer> -->
+</footer>
 
 </body>
 </html>
