--- a/LandingInfo/index.html
+++ b/LandingInfo/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
 
-<div class="header large-12">
+<div class="header large-12 medium-12">
 	<div class="row">
 		<nav class="navbar compress">
-			<div class="large-5 columns">
+			<div class="large-5 medium-5 small-6 columns">
 				<a href="#">Link</a>
 				<a href="#">Link</a>
 			</div>
 
-			<div class="large-2 columns text-center">
+			<div class="large-2 medium-2 hide-for-small-only columns text-center">
 				<h5>Dolor Sit</h5>
 			</div>
 
-			<div class="large-5 columns left-nav">
+			<div class="large-5 medium-5 small-6 columns left-nav">
 				<a href="#">Link</a>
 				<a href="#">Link</a>
 			</div>
@@ -38,7 +38,7 @@
 </div><!-- header -->
 
 <div class="content">
-	<div class="large-12 text-center">
+	<div class="large-12 medium-12 text-center">
 		<div class="row">
 			<h3>Praesent euismod neque quis elementum fermentum</h3>
 		</div>
@@ -53,7 +53,7 @@
 	</div><!-- row -->
 
 	<div class="row imgColumns">
-		<div class="large-4 columns">
+		<div class="large-4 medium-4 columns">
 			<div class="threeBox">
 				<div class="imgBox">
 					<img src="assets/thankyou.jpg">
@@ -67,7 +67,7 @@
 			</div>
 		</div>
 
-		<div class="large-4 columns">
+		<div class="large-4 medium-4 columns">
 			<div class="threeBox">
 				<div class="imgBox">
 					<img src="assets/sofa.jpg">
@@ -81,7 +81,7 @@
 			</div>
 		</div>
 
-		<div class="large-4 columns">
+		<div class="large-4 medium-4 columns">
 			<div class="threeBox">
 				<div class="imgBox">
 					<img src="assets/lights.jpg">
@@ -99,7 +99,7 @@
 </div><!-- content -->
 
 
-<footer class="large-12">
+<footer class="large-12 medium-12">
 	<div class="row text-center">
 			<h3>Praesent euismod neque quis elementum</h3>
 
