git ignore, blackpink assets, header, search

--- a/SomethingBlackPink/index.html
+++ b/SomethingBlackPink/index.html
@@ -8,12 +8,29 @@
  	<title>Something Black and Pink</title>
 
 	<link rel="stylesheet" type="text/css" href="../assets/foundation.css">
+	<link rel="stylesheet" type="text/css" href="../assets/icons/foundation-icons.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
-
 <!-- row then columns -->
+
+
+<div class="header">
+
+	<div class="row" id="searchRow">
+		<form class="searchbox">
+	        <input type="search" placeholder="Search......" name="search" class="searchbox-input" onkeyup="buttonUp();" required>
+	        <input type="submit" class="searchbox-submit" value="GO">
+	        <span class="searchbox-icon fi-magnifying-glass"></span>
+	    </form>
+	</div>
+
+	<div class="row">
+		<img src="assets/BlackPinkLogo.png" alt="Logo">
+	</div>
+
+</div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
