header and nav styled and built additional images

--- a/SomethingBlackPink/index.html
+++ b/SomethingBlackPink/index.html
@@ -26,8 +26,78 @@
 	    </form>
 	</div>
 
-	<div class="row">
+	<div class="row text-center">
 		<img src="assets/BlackPinkLogo.png" alt="Logo">
+	</div>
+
+</div><!-- header -->
+
+<div class="navbar">
+	<div class="row">
+		<a href="#">Link</a>
+		<a href="#">Link</a>
+		<a href="#">Link</a>
+		<a href="#">Link</a>
+		<a href="#">Link</a>
+	</div>
+</div>
+
+
+<div class="content">
+	<div class="sectionOne">
+		<div class="row text-center">
+			<h1>Heading</h1>
+			<h3>Subheading</h3>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tempor orci eget dui lacinia sodales. Maecenas vitae lectus eget turpis bibendum pellentesque. Aenean suscipit tincidunt felis vel ultricies. Cras feugiat convallis mi. Donec id tristique risus, non ultrices est. Aliquam et risus ac lectus fermentum finibus quis a lorem.</p>
+		</div>
+
+		<div class="row">
+			<div class="large-6 columns">
+				<div class="dateContainer">
+					<div class="imageTop">
+						<img src="assets/dateCat.jpg">
+					</div>
+
+					<div class="dateBottom">
+						<div class="large-2 columns">
+							<p>Month</p>
+							<h4>10</h4>
+						</div>
+
+						<div class="large-10 columns">
+							Nunc faucibus, eros ut ultrices ullamcorper.
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="large-6 columns">
+				<div class="dateContainer">
+					<div class="imageTop">
+						<img src="assets/dateCat2.jpg">
+					</div>
+
+					<div class="dateBottom">
+						<div class="large-2 columns">
+							<p>Month</p>
+							<h4>10</h4>
+						</div>
+
+						<div class="large-10 columns">
+							Nunc faucibus, eros ut ultrices ullamcorper.
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div><!-- sectionOne -->
+
+	<div class="sectionTwo">
+	</div>
+
+	<div class="sectionThree">
 	</div>
 
 </div>
